# hoisavegames

./: .gitignore  CMakeLists.txt  Main.qml  Message.qml  READMD.md  datetimeformat.h  hoifileparser.cpp  hoifileparser.h  hoimodel.cpp  hoimodel.h  hoisavenode.cpp  hoisavenode.h  line.cpp  line.h  main.cpp  message_handler.cpp  message_handler.h  qtquickcontrols2.conf  savegamelistener.cpp  savegamelistener.h  setup.iss  使用方式.docx
